<resources>
    <string name="app_name">Unutmaz Chat</string>
    <string name="appTitle">UNUTMAZ CHAT</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="submit">Submit</string>
    <string name="username">Username</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="emailHint">example@domain.com</string>
    <string name="defaultHint">Type here..</string>
    <string name="confirmPaswword">Confirm Password</string>
    <string name="logout">Logout</string>
</resources>